getting all API added
